// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card Component > Snapshots > should match snapshot with card action 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
  data-slot="card"
>
  <div
    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
    data-slot="card-header"
  >
    <div
      class="leading-none font-semibold"
      data-slot="card-title"
    >
      Title
    </div>
    <div
      class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
      data-slot="card-action"
    >
      Action
    </div>
  </div>
  <div
    class="px-6"
    data-slot="card-content"
  >
    Content
  </div>
</div>
`;

exports[`Card Component > Snapshots > should match snapshot with full card 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
  data-slot="card"
>
  <div
    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
    data-slot="card-header"
  >
    <div
      class="leading-none font-semibold"
      data-slot="card-title"
    >
      Title
    </div>
    <div
      class="text-muted-foreground text-sm"
      data-slot="card-description"
    >
      Description
    </div>
  </div>
  <div
    class="px-6"
    data-slot="card-content"
  >
    Content
  </div>
  <div
    class="flex items-center px-6 [.border-t]:pt-6"
    data-slot="card-footer"
  >
    Footer
  </div>
</div>
`;

exports[`Card Component > Snapshots > should match snapshot with minimal card 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
  data-slot="card"
>
  Content
</div>
`;
